<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel" translatable="false">download_notification</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="main_header">Main header</string>
    <string name="glide_download_text">Glide - Image Loading Library by BumpTech</string>
    <string name="udacity_download_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_download_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="download">Download</string>
    <string name="ok">OK</string>
    <string name="download_unselected_message">Please select the file to download</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
</resources>
